<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name"
        android:layout_margin="@dimen/default_margin"
        style="@style/TextAppearance.AppCompat.Title"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSymbol"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:textColor="@color/default_value_color"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLTPLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ltp"
        android:textColor="@color/default_value_color"
        app:layout_constraintBottom_toBottomOf="@+id/tvLtpValue"
        app:layout_constraintEnd_toStartOf="@+id/tvLtpValue"
        app:layout_constraintTop_toTopOf="@+id/tvLtpValue"
        android:layout_marginEnd="@dimen/default_margin"
        style="@style/TextAppearance.AppCompat.Title"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLtpValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="LTP"
        style="@style/TextAppearance.AppCompat.Title"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPNLLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pnl"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:textColor="@color/default_value_color"
        app:layout_constraintBottom_toBottomOf="@+id/tvPnlValue"
        app:layout_constraintEnd_toStartOf="@+id/tvPnlValue"
        app:layout_constraintTop_toBottomOf="@+id/tvLtpValue"
        style="@style/TextAppearance.AppCompat.Title"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPnlValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="@+id/tvLtpValue"
        app:layout_constraintTop_toBottomOf="@+id/tvLtpValue"
        tools:text="PNL"
        style="@style/TextAppearance.AppCompat.Title"
        />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuantity"
        />

</androidx.constraintlayout.widget.ConstraintLayout>